@@ -1,3 +1,10 @@
+2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile: Use bin2c to more reliably turn the tarfile into a
+	linkable object file. Ignore .cvsignore when making tarfile.
+	* init.c: Clean up tarfile symbol definitions.
+	* .cvsignore, rootfs/.cvsignore: New files.
+
 2007-08-16	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile: Account for -B architecture option.
